--- a/SoundApps/soundboard/src/index.css
+++ b/SoundApps/soundboard/src/index.css
@@ -4,20 +4,47 @@ body {
     background-color: #09182a;
 }
 
-h1 {
+a {
+    color: #000000;
+    text-decoration: none;
+}
+a:hover{
+    color: deeppink;
+}
+
+h1{
     background-color: #b3b3b3;
-    width: 1090px;
+    width: 1170px;
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+div {
     padding: 10px;
 }
 
+ul {
+    list-style-type: "\1F3B5";
+}
+
+li span{
+    position: relative;
+    left: 5px
+}
+
 button {
-    width: 200px;
-    height: 75px;
+    width: 230px;
+    height: 60px;
     font: 14px "Century Gothic", Futura, sans-serif;
     background-color: #1D4E89;
     color: #b3b3b3;
     border: 2px #1D4E89 solid;
+    outline: none;
 }
+
+
 
 button.playing {
     border: 2px hotpink solid;
@@ -30,5 +57,16 @@ button.paused {
 .button-array{
     display: grid;
     grid-gap: 10px 10px;
-    grid-template-columns: 200px 200px 200px 200px 200px 200px;
+    grid-template-columns: 230px 230px 230px 230px 230px;
+    justify-content: center;
+}
+
+.directions {
+    background-color: #123054;
+    border: 1px #000000 solid;
+    color: #b3b3b3;
+    width: 1170px;
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
