added pulse animation to track buttons

--- a/SoundApps/soundboard/src/index.css
+++ b/SoundApps/soundboard/src/index.css
@@ -40,18 +40,54 @@ button {
     font: 14px "Century Gothic", Futura, sans-serif;
     background-color: #1D4E89;
     color: #b3b3b3;
-    border: 2px #1D4E89 solid;
+    border: none;
     outline: none;
 }
 
+/* ref: https://codepen.io/Chester/pen/QPoyjN */
+@keyframes pulse {
+    0% {
+        opacity: 0.45;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.45;
+    }
 
+}
 
 button.playing {
-    border: 2px hotpink solid;
+    position: relative;
+    z-index: 0;
 }
+
+button.playing::before{
+    content: '';
+    position: absolute;
+    z-index: -2;
+    left: 0;
+    top: 0;
+    width: 230px;
+    height: 60px;
+    background-color: deeppink;
+    animation: pulse 5s infinite;
+}
+
+button.playing::after{
+    content: '';
+    position: absolute;
+    z-index: -1;
+    left: 2px;
+    top: 2px;
+    width: calc(100% - 4px);
+    height: calc(100% - 4px);
+    background: #1D4E89;
+}
+
 button.paused {
     border: 2px #1D4E89 solid;
-    /*border: 2px yellowgreen solid;*/
 }
 
 .button-array{
